# Qtec--DevOps-Assesment

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  deploy.yml
app/: config.py  logger.py  main.py
docker/: .dockerignore  Dockerfile
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
monitoring/: grafana-deployment.yaml  prometheus-config.yaml  prometheus-deployment.yaml
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  test_api.py
